Integrate OpenGL with GLAD and add ObjectManager
Added GLAD OpenGL loader and necessary third-party headers and sources. Introduced ObjectManager class and related header/source files. Updated RenderManager and WindowManager to support OpenGL context initialization and removed vsync from WindowManager. Modified Engine and project files to support these changes. Adjusted MainMenu and main.cpp for new frame timing and state logic.

--- a/Hog_Engine/Hog_Engine/Hog_Engine.vcxproj
+++ b/Hog_Engine/Hog_Engine/Hog_Engine.vcxproj
@@ -143,13 +143,16 @@
   <ItemGroup>
     <ClInclude Include="Extern\Engine.h" />
     <ClInclude Include="Extern\InputManager.h" />
+    <ClInclude Include="Extern\ObjectManager.h" />
     <ClInclude Include="Extern\RenderManager.h" />
     <ClInclude Include="Extern\WindowManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Extern\StateManager.h" />
+    <ClCompile Include="..\ThirdParty\lib\x64\glad.c" />
     <ClCompile Include="lib\Engine.cpp" />
     <ClCompile Include="lib\InputManager.cpp" />
+    <ClCompile Include="lib\ObjectManager.cpp" />
     <ClCompile Include="lib\RenderManager.cpp" />
     <ClCompile Include="lib\StateManager.cpp" />
     <ClCompile Include="lib\WindowManager.cpp" />
