--- a/Hog_Engine/Hog_Engine/Hog_Engine.vcxproj.filters
+++ b/Hog_Engine/Hog_Engine/Hog_Engine.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Extern\RenderManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Extern\ObjectManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\WindowManager.cpp">
@@ -45,6 +48,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="lib\RenderManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ThirdParty\lib\x64\glad.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\ObjectManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
