Refactor engine core and rendering, add FPS utilities
Refactored engine internals into EngineInternal.h, updated main engine loop for accurate frame timing and FPS calculation, and exposed FPS and window title utilities. Overhauled RenderManager to use modern OpenGL with VAO/VBO/EBO and shader program setup. ObjectManager now manages Actor objects. Updated MainMenu to display FPS in window title. Adjusted WindowManager and project files to support new interfaces and structure.

--- a/Hog_Engine/Hog_Engine/Hog_Engine.vcxproj
+++ b/Hog_Engine/Hog_Engine/Hog_Engine.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="Extern\ObjectManager.h" />
     <ClInclude Include="Extern\RenderManager.h" />
     <ClInclude Include="Extern\WindowManager.h" />
+    <ClInclude Include="lib\EngineInternal.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Extern\StateManager.h" />
