--- a/Hog_Engine/Hog_Engine/Hog_Engine.vcxproj.filters
+++ b/Hog_Engine/Hog_Engine/Hog_Engine.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Extern\ObjectManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="lib\EngineInternal.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\WindowManager.cpp">
